Created interface for api types

--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiData.cs" />
+    <Compile Include="IApiBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
