--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DFC5A6EC-E496-4B68-9A0D-8F775676293F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Domo.WebAPI</RootNamespace>
-    <AssemblyName>Domo.WebAPI</AssemblyName>
+    <RootNamespace>Domo.API</RootNamespace>
+    <AssemblyName>Domo.API</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
