--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -59,6 +59,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\AsyncUsageAnalyzers.1.0.0-alpha003\analyzers\dotnet\AsyncUsageAnalyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domo.Main\Domo.Main.csproj">
+      <Project>{4AA27AFE-8E27-45D6-8186-07C36A08C851}</Project>
+      <Name>Domo.Main</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
