Webapi now can now start the service

--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IApiBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebAPI.cs" />
+    <Compile Include="Web\Modules\WebRootModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
