--- a/Domo/Domo.ConsoleApp/Domo.ConsoleApp.csproj
+++ b/Domo/Domo.ConsoleApp/Domo.ConsoleApp.csproj
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domo.Main\Domo.Main.csproj">
+    <ProjectReference Include="..\Domo.Misc\Domo.Misc.csproj">
       <Project>{4AA27AFE-8E27-45D6-8186-07C36A08C851}</Project>
-      <Name>Domo.Main</Name>
+      <Name>Domo.Misc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
