--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -48,11 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiCodes.cs" />
     <Compile Include="ApiListenerData.cs" />
     <Compile Include="IApiBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebAPI.cs" />
-    <Compile Include="Web\Modules\WebRootModule.cs" />
+    <Compile Include="Web\WebAPI.cs" />
+    <Compile Include="ApiResponse.cs" />
+    <Compile Include="Web\Modules\ApiKeyModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -64,6 +66,10 @@
     <ProjectReference Include="..\Domo.Misc\Domo.Misc.csproj">
       <Project>{4AA27AFE-8E27-45D6-8186-07C36A08C851}</Project>
       <Name>Domo.Misc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domo.Serialization\Domo.Serialization.csproj">
+      <Project>{afe55739-f8bf-4f34-9e99-196928621e68}</Project>
+      <Name>Domo.Serialization</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
