--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="ApiCodes.cs" />
     <Compile Include="ApiListenerData.cs" />
+    <Compile Include="ApiManager.cs" />
     <Compile Include="ApiBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\WebAPI.cs" />
