--- a/Domo/Domo.API/Domo.API.csproj
+++ b/Domo/Domo.API/Domo.API.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiCodes.cs" />
-    <Compile Include="ApiListenerData.cs" />
+    <Compile Include="ApiRequest.cs" />
     <Compile Include="ApiManager.cs" />
     <Compile Include="ApiBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
