--- a/Domo/Domo.Modules/Domo.Modules.csproj
+++ b/Domo/Domo.Modules/Domo.Modules.csproj
@@ -40,7 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControllerModule.cs" />
+    <Compile Include="HardwareInterfaceModule.cs" />
+    <Compile Include="HardwareDependentModule.cs" />
+    <Compile Include="IRawDataObject.cs" />
+    <Compile Include="ModuleBase.cs" />
+    <Compile Include="NotInitializedException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensorModule.cs" />
+    <Compile Include="SensorTriggerModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
