--- a/Domo/Domo.Scripting/Domo.Scripting.csproj
+++ b/Domo/Domo.Scripting/Domo.Scripting.csproj
@@ -73,9 +73,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptEngine.cs" />
+    <Compile Include="ScriptingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domo.Misc\Domo.Misc.csproj">
+      <Project>{4AA27AFE-8E27-45D6-8186-07C36A08C851}</Project>
+      <Name>Domo.Misc</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
