--- a/Domo/Domo.Modules/Domo.Modules.csproj
+++ b/Domo/Domo.Modules/Domo.Modules.csproj
@@ -42,10 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControllerModule.cs" />
+    <Compile Include="AutoFillGenericAttribute.cs" />
     <Compile Include="HardwareInterfaceModule.cs" />
     <Compile Include="HardwareDependentModule.cs" />
+    <Compile Include="IControllerModule.cs" />
     <Compile Include="IRawDataObject.cs" />
+    <Compile Include="ISensorModule.cs" />
     <Compile Include="ModuleBase.cs" />
+    <Compile Include="ModuleFactory.cs" />
+    <Compile Include="ModuleManager.cs" />
     <Compile Include="NotInitializedException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SensorModule.cs" />
@@ -61,6 +66,10 @@
     <ProjectReference Include="..\Domo.API\Domo.API.csproj">
       <Project>{DFC5A6EC-E496-4B68-9A0D-8F775676293F}</Project>
       <Name>Domo.API</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domo.Misc\Domo.Misc.csproj">
+      <Project>{4AA27AFE-8E27-45D6-8186-07C36A08C851}</Project>
+      <Name>Domo.Misc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
