Added the python packages to the packaging project

--- a/Domo/Domo.Packaging/Domo.Packaging.csproj
+++ b/Domo/Domo.Packaging/Domo.Packaging.csproj
@@ -59,6 +59,22 @@
       <Name>Domo.Serialization</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Packages\Test - Copy\0.1\Manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Packages\Test2\0.1\Manifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Packages\Test - Copy\0.1\Test.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Packages\Test2\0.1\Temp.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
