--- a/Domo/Domo.Modules/Domo.Modules.csproj
+++ b/Domo/Domo.Modules/Domo.Modules.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ModuleManager.cs" />
     <Compile Include="NotInitializedException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadWriteMode.cs" />
     <Compile Include="SensorModule.cs" />
     <Compile Include="SensorTriggerModule.cs" />
     <Compile Include="UI\ApiListenerUI.cs" />
