--- a/Domo/Domo.Modules/Domo.Modules.csproj
+++ b/Domo/Domo.Modules/Domo.Modules.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadWriteMode.cs" />
     <Compile Include="SensorModule.cs" />
-    <Compile Include="SensorTriggerModule.cs" />
+    <Compile Include="TriggerModule.cs" />
     <Compile Include="UI\ApiListenerUI.cs" />
     <Compile Include="UI\Controls\Button.cs" />
     <Compile Include="UI\Controls\Control.cs" />
