Created modules for checking lan devices

--- a/Domo/Domo.Packaging/Domo.Packaging.csproj
+++ b/Domo/Domo.Packaging/Domo.Packaging.csproj
@@ -139,6 +139,12 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Packages\ModuleTest\0.1\LanSensor.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Packages\ModuleTest\0.1\LanTrigger.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Packages\Nmap\0.6.1\nmap.py">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
