--- a/Domo/Domo.Misc/Domo.Misc.csproj
+++ b/Domo/Domo.Misc/Domo.Misc.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="Debug\FileLogger.cs" />
     <Compile Include="Debug\ConsoleLogger.cs" />
     <Compile Include="Debug\Log.cs" />
     <Compile Include="Debug\Logger.cs" />
