--- a/Domo/Domo.Packaging/Packages/ModuleTest/0.1/Manifest.json
+++ b/Domo/Domo.Packaging/Packages/ModuleTest/0.1/Manifest.json
@@ -6,5 +6,14 @@
   ],
   "dependencies": [
     "Nmap"
+  ],
+  "executionOrder": [
+    "ArduinoInterface",
+    "ArduinoLightsController",
+    "ArduinoLightsForm",
+    "SpotifyInterface",
+    "SpotifyController",
+    "SpotifySensor",
+    "SpotifyForm"
   ]
 }
