Renamed execution order to execution priority

--- a/Domo/Domo.Packaging/Packages/ModuleTest/0.1/Manifest.json
+++ b/Domo/Domo.Packaging/Packages/ModuleTest/0.1/Manifest.json
@@ -7,7 +7,7 @@
   "dependencies": [
     "Nmap"
   ],
-  "executionOrder": [
+  "executionPriority": [
     "ArduinoInterface",
     "ArduinoLightsController",
     "ArduinoLightsForm",
