--- a/Domo/Domo.Packaging/Packages/ModuleTest/0.1/Manifest.json
+++ b/Domo/Domo.Packaging/Packages/ModuleTest/0.1/Manifest.json
@@ -3,6 +3,10 @@
   "description": "Test Description",
   "iconPath": null,
   "permissions": [
+    "*"
+  ],
+  "searchPaths":[
+    "Lib"
   ],
   "dependencies": [
     "Nmap"
