--- a/Domo/Domo.Packaging/Packages/aTest - Copy/0.1/Manifest.json
+++ b/Domo/Domo.Packaging/Packages/aTest - Copy/0.1/Manifest.json
@@ -1,8 +1,14 @@
 {
-  "name": "Test",
+  "name": "Test2",
   "description": "Test Description",
   "iconPath": null,
   "permissions": [
     "*"
+  ],
+  "searchPaths": [
+    "Lib"
+  ],
+  "dependencies":[
+    "Test"
   ]
 }
